# apps/api/domain/vo/datetime.go
@@ -1,6 +1,8 @@
 package vo
 
 import (
+	"database/sql/driver"
+	"errors"
 	"time"
 )
 
@@ -18,4 +20,25 @@ func (d *DateTime) Time() time.Time {
 
 func (d *DateTime) String() string {
 	return d.value.Format(time.RFC3339Nano)
+}
+
+// Value implements the driver.Valuer interface
+func (d *DateTime) Value() (driver.Value, error) {
+	if d == nil {
+		return nil, nil
+	}
+	return d.value, nil
+}
+
+// Scan implements the sql.Scanner interface
+func (d *DateTime) Scan(value interface{}) error {
+	if value == nil {
+		d.value = time.Time{}
+		return nil
+	}
+	if v, ok := value.(time.Time); ok {
+		d.value = v
+		return nil
+	}
+	return errors.New("invalid DateTime type")
 }
