# apps/api/models/user.go
@@ -2,6 +2,7 @@ package models
 
 import (
 	"go-auth/domain/entity"
+	"go-auth/domain/vo"
 	"go-auth/utils/token"
 	"strings"
 	"time"
@@ -66,6 +67,50 @@ func (u *User) PrepareOutput() *User {
 	return u
 }
 
+// ToModel converts entity.User to models.User
+func ToModel(user *entity.User) *User {
+	return &User{
+		ID:        user.ID,
+		UUID:      user.UUID.String(),
+		Name:      user.Name.String(),
+		Email:     user.Email.String(),
+		Password:  user.Password,
+		CreatedAt: user.CreatedAt.Time(),
+		UpdatedAt: user.UpdatedAt.Time(),
+	}
+}
+
+// ToEntity converts models.User to entity.User
+func ToEntity(user *User) (*entity.User, error) {
+	name, err := vo.NewName(user.Name)
+	if err != nil {
+		return nil, err
+	}
+
+	email, err := vo.NewEmail(user.Email)
+	if err != nil {
+		return nil, err
+	}
+
+	uuid, err := vo.NewUUID(user.UUID)
+	if err != nil {
+		return nil, err
+	}
+
+	createdAt := vo.NewDateTime(user.CreatedAt)
+	updatedAt := vo.NewDateTime(user.UpdatedAt)
+
+	return &entity.User{
+		ID:        user.ID,
+		UUID:      *uuid,
+		Name:      *name,
+		Email:     *email,
+		Password:  user.Password,
+		CreatedAt: *createdAt,
+		UpdatedAt: *updatedAt,
+	}, nil
+}
+
 // 認証用関数
 func AuthenticateUser(email string, password string) (string, error) {
 	var user User
@@ -92,18 +137,19 @@ func AuthenticateUser(email string, password string) (string, error) {
 }
 
 func FindUserByID(id uint) (*entity.User, error) {
-	var user entity.User
+	var user User
 	if err := DB.First(&user, id).Error; err != nil {
 		return nil, err
 	}
-	return &user, nil
+	return ToEntity(&user)
 }
 
 func CreateUser(user *entity.User) (*entity.User, error) {
-	if err := DB.Create(user).Error; err != nil {
+	modelUser := ToModel(user)
+	if err := DB.Create(modelUser).Error; err != nil {
 		return nil, err
 	}
-	return user, nil
+	return ToEntity(modelUser)
 }
 
 func UpdateUser(user *entity.User) (*entity.User, error) {
